--- a/First.html
+++ b/First.html
@@ -11,8 +11,7 @@
 
 </style>
 <body>
-    <h1>Мир пончиков</h1>
-<p> Привет из Алгоритмики</p>
-  <p> Привет из Алгоритмики</p>
+    <h1 style="color: red;">Мир пончиков</h1>
+
 </body>
 </html>
